--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ environment:
     - OCAMLBRANCH: 4.04
     - OCAMLBRANCH: 4.05
     - OCAMLBRANCH: 4.06
+    - OCAMLBRANCH: 4.07
       SKIP_OCAML_TEST: no
     - OCAMLBRANCH: trunk
       SKIP_OCAML_TEST: no
