--- a/version.rc
+++ b/version.rc
@@ -22,6 +22,10 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "FileVersion", FLEXDLL_VERSION_STR
+            VALUE "ProductVersion", FLEXDLL_VERSION_STR
+            VALUE "ProductName", "FlexDLL"
+            VALUE "FileDescription", "FlexDLL Linker"
+            VALUE "LegalCopyright", "Institut National de Recherche en Informatique et en Automatique"
         END
     END
     BLOCK "VarFileInfo"
